--- a/Uber_Eats/Home.css
+++ b/Uber_Eats/Home.css
@@ -1,7 +1,7 @@
 .background
     {
         width: 100%;
-        height: 707px;
+        height: 710px;
         background: url(..//Images/uberbg.webp) no-repeat;
         background-size: cover;
         box-sizing: border-box;
@@ -9,6 +9,10 @@
     h2
     {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    p
+    {
+        font-size: large;
     }
     .text
     {
@@ -46,27 +50,31 @@
         width: 460px;
         height: 40px;
         font-size: medium;
+        border: 1px solid white;
+    }
+    .input2
+    {
+        display: flex;
+        justify-content: space-between;
+        margin-right: 120px;
     }
       #selecton
     {
         width: 200px;
         height: 45px;
-        float: right;
+        /* float: right; */
         font-size: large;
-       margin-top: -45px;
-       margin-right: 250px;
+       border: 1px solid white;
     }
     .Button3
     {
-        float: right;
+        /* float: right; */
         width: 128px;
         height: 45px;
         background-color: black;
         color: white;
         border-radius: 10%;
         font-size: large;
-        margin-top: -80px;
-        margin-right: 530px;
     }
     .Images
     {
@@ -75,6 +83,8 @@
         /* border: 1px solid black; */
         margin-top: 50px;
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
     img
     {
@@ -82,7 +92,7 @@
         height: 350px;
         
     }
-    .image1
+    /* .image1
     {
         margin-left: 0px;
     }
@@ -95,7 +105,7 @@
     {
         margin-left: 10px;
         margin-top: -18px;
-    }
+    } */
     a
     {
         text-decoration: none;
