--- a/Coffee_web/coffee_page.css
+++ b/Coffee_web/coffee_page.css
@@ -15,7 +15,7 @@
             width: 100%;
             height: 707px;
             border: 1px solid black;
-            background: url(./Images/Place\ Your\ Image\ Here\ \(Double\ Click\ to\ Edit\).png) no-repeat;
+            background: url(../Images/Place\ Your\ Image\ Here\ \(Double\ Click\ to\ Edit\).png) no-repeat;
             background-size: cover;
             font-size: 70px;
             padding-top: 30px;
@@ -111,4 +111,70 @@
         .mydiv2
         {
             padding-left: 100px;    
+        }
+        .Menu
+        {
+            width: 100%;
+            height: 781px;
+            border: 1px solid black;
+            background-color: #b13941;
+        }
+        #mtitle
+        {
+            font-size: 40px;
+            font-family: "Yeseva One";
+            text-align: center;
+            color: #feedda;
+        }
+        #mpara
+        {
+            font-size: 25px;
+            text-align: center;
+            color: #feedda;
+        }
+        .card
+        {
+            width: 500px;
+            height: 350px;
+            display: flex;
+            /* border: 1px solid black; */
+            background-color: white;
+            margin-top: 80px;
+            margin-left: 10px;
+            margin-right: 10px;
+            /* justify-content: space-around; */
+        }
+    
+        #mp1
+        {
+            text-align: center;
+            color: black;
+            font-size: 40px;
+            font-family: "Yeseva One";
+        }
+        #mp2
+        {
+            word-spacing: 5px;
+            text-align: center;
+            font-size: medium;
+            color: black;
+        }
+          .card img
+        {
+            width: 250px;
+        }
+        .allcards
+        {
+            display: flex;
+            justify-content: space-between;
+        }
+        .b3
+        {
+            margin-left: 40px;
+            width: 140px;
+            height: 47px;
+            font-family: "Yeseva One";
+            color: #feedda;
+            background-color: #b13941;
+            font-size: 15px;
         }
