--- a/Coffee_web/coffee_page.css
+++ b/Coffee_web/coffee_page.css
@@ -178,3 +178,213 @@
             background-color: #b13941;
             font-size: 15px;
         }
+        .store
+        {
+            width: 100%;
+            height: 969px;
+            border: 1px solid black;
+            background-color: #f8eed3;
+        }
+        #stitle
+        {
+            font-size: 50px;
+            font-family: "Yeseva One";
+            text-align: center;
+            color: #b13941;
+            font-weight: bold;
+        }
+        #spara
+        {
+            text-align: center;
+            font-size: 25px;
+            font-family: "PT Serif";
+            color: #b13941;
+        }
+        .cards2
+        {
+            display: flex;
+            justify-content: space-around;
+        }
+        .card1
+        {
+            width: 351px;
+            height: 556px;
+            /* border: 1px solid black; */
+            background-color: white;
+        }
+        #spara1
+        {
+            padding-top: 50px;
+            text-align: center;
+            font-size: large;
+            color: #555555;
+            font-weight: 400;
+        }
+        .b4
+        {
+            margin-left: 100px;
+            width: 120px;
+            height: 47px;
+            font-family: "Yeseva One";
+            color: #feedda;
+            background-color: #b13941;
+            font-size: 20px;
+        }
+        .Company-profile
+        {
+            width: 100%;
+            height: 700px;
+            border: 1px solid black;
+            background-color: #b13941;
+            display: flex;
+            /* justify-content: space-between; */
+        }
+        .movie
+        {
+            width: 50%;
+            height: 400px;
+            /* border: 1px solid black; */
+            margin-left: 60px;
+            margin-top: 100px;
+        }
+        .Company-profile video
+        {
+            width: 100%;
+            height: 400px;
+        }
+        .company-content
+        {
+            width: 50%;
+            height: 400px;
+            /* text-align: center; */
+            /* margin-left: 60px; */
+            margin-top: 100px;
+        }
+        #Company-Profile
+        {
+            font-size: 45px;
+            letter-spacing: 1px;
+            font-family: "Yeseva One";
+            /* text-align: center; */
+            padding-left: 50px;
+            font-weight: 400;
+            color: #feedda;
+        }
+        #profile-content
+        {
+            width: 576px;
+            /* height: 277px; */
+            /* text-align: center; */
+            font-size: 21px;
+            color: #feedda;
+            font-family: "PT Serif"; 
+            padding-left: 50px;  
+        }
+     .icon
+     {
+        width: 200px;
+        display: flex;
+        padding-left: 50px;
+        justify-content: space-around;
+     }
+    .Contact-us
+    {
+        width: 100%;
+        height: 767px;
+        border: 1px solid black;
+        display: flex;
+    }
+    #ctitle
+    {
+        font-size: 45px;
+        font-family: "Yeseva One";
+        text-align: center;
+        color: #b13941;
+        font-weight: bold;
+    }
+    .Inputside
+    {
+        width: 100%;
+        height: 767px;
+        border: 1px solid black;
+        background-color: #efefef;
+    }
+    #input1
+    {
+        margin-left: 60px;
+        width: 651px;
+        height: 50px;
+        background-color: #efefef;
+    }
+    #input2
+    {
+        margin-left: 60px;
+        width: 650px;
+        height: 100px;
+        background-color: #efefef;
+    }
+    #b5
+    {
+        margin-top: 40px;
+        margin-left: 60px;
+        width: 150px;
+        height: 47px;
+        font-family: "Yeseva One";
+        color: #feedda;
+        background-color: #b13941;
+        font-size: 20px;
+    }
+    .lastdata
+    {
+        width: 100%;
+        height: 323px;
+        border: 1px solid black;
+        background-color: #b13941;
+        display: flex;
+    }
+    #coffee1
+    {
+        margin: 50px;
+        width: 200px;
+    }
+    .table1
+    {
+        margin-top: 50px;
+        width: 201px;
+        height: 270px;
+        /* border: 1px solid black; */
+    }
+    #data1
+    {
+        text-align: center;
+        font-size: 25px;
+        font-weight: bold;
+        color: #feedda;
+    }
+    #data2
+    {
+        font-size: 20px;
+        color: #feedda;
+        font-weight: 400;
+        text-align: center;
+    }
+    #data3
+    {
+        margin-top: 100px;
+        width: 201px;
+        height: 270px;
+        font-size: 20px;
+        color: #feedda;
+        font-weight: 400;
+        text-align: center;
+    }
+    .data4
+    {
+        margin-top: 80px;
+        margin-left: 80px;
+        background-color: #b13941;
+    }
+    #data5
+    {
+        color: #feedda;
+    }
