--- a/sushi-web/sushi.css
+++ b/sushi-web/sushi.css
@@ -9,6 +9,7 @@
 {
     background: url(./image/food-background.png) no-repeat center center/cover;
     width: 100%;
+    overflow: hidden;
     /* height: 796px; */
 }
 .nav-wrapper
@@ -221,8 +222,8 @@ text-align: center;
 #shape7
 {
     position: absolute;
-   top: 100px;
-   left: 110px;
+   top: 140px;
+   left: 160px;
 }
 
 #shape8
@@ -289,10 +290,15 @@ justify-content: space-around;
 #content4
 {
 
-   font-size: 30px;
+   font-size: 27px;
 color: #21243d;
 font-weight: 400;
 font-family: "Montserrat";
+}
+
+.joint2
+{
+    display: flex;
 }
 
 .b2
@@ -527,6 +533,7 @@ border: 1px solid blue;
     width: 100%;
 /* height: 796px; */
 background: url(./image/bgimage2.png) no-repeat center center/cover;
+overflow-x: hidden;
 }
 
 .page6titile
@@ -680,6 +687,7 @@ margin-bottom: 100px;
     /* height: 700px; */
     background-color: #111111;
     /* border: 1px solid black; */
+    /* overflow-x: hidden; */
 }
 
 .joint1
