--- a/sushi-web/sushi.css
+++ b/sushi-web/sushi.css
@@ -18,25 +18,48 @@
 }
 .container 
 {
-    /* width: 100%; */
+    width: 100%;
     margin: 0 auto;
 }
+
+.menu
+{
+    display: flex;
+    align-items: center;
+    /* flex-direction: column; */
+}
+
+#check1
+{
+    width: 50px;
+    height: 50px;
+}
+
 nav
 {
     padding: 20px 0px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    display: none;
 }
+
+input:checked + nav
+{
+    display: flex;
+    /* flex-direction: column; */
+}
+
 ul
 {
     display: flex;
     list-style-type: none;
 }
+/* 
 .image
 {
     padding-left: 20px;
-}
+} */
 a{
     padding: 60px;
     font-size: 25px;
@@ -47,7 +70,8 @@ a:active
 {
     color: red;
 }
-.search
+
+#search
 {
     padding-right: 40px;
     font-size: 25px;
