--- a/Burgir-web/Burger.css
+++ b/Burgir-web/Burger.css
@@ -7,7 +7,7 @@
         #header1
         {
             /* width: 100%; */
-            height: 825px;
+            /* height: 825px; */
             background-color: #ffc045;
             position: relative;
             overflow: hidden;
@@ -71,6 +71,7 @@
        .content1
        {
         margin-top: 100px;
+        padding-bottom: 100px;
        }
 
        #para1
@@ -95,6 +96,7 @@
             font-weight:  bold;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             text-shadow: 10px 20px 15px white;
+            padding-bottom: 100px;
        }
 
        #main-content1
@@ -254,6 +256,11 @@
    .main-content2
    {
     margin-top: 50px;
+   }
+
+   #page3
+   {
+    position: relative;
    }
 
    #page3p1
@@ -606,6 +613,14 @@ padding-left: 10px;
 }
 
 .main
+{
+    /* text-align: center;   */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#img6
 {
     text-align: center;
 }
